syntax = "proto3";
package raftprotos;
option go_package = "./raftprotos";

message LogEntry {
    int32 term = 1;
    int32 index = 2;
    string command = 3;
    string clientAddr = 4;
    int32 clientPort = 5;
}